--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
 					<h2> Losses: </h2>	
 			</div><!--closes board-->
 
-				<img src="assets/images/pearl.svg" alt="pearl" width="150" height="150">
-				<img src="assets/images/emerald.svg" alt="emerald" width="150" height="150">
-				<img src="assets/images/moonstone.svg" alt="moonstone" width="150" height="150">
-				<img src="assets/images/alexandrite.svg" alt="alexandrite" width="150" height="150">
+				<img src="assets/images/crystal1.svg" alt="pink crystal" width="150" height="150">
+				<img src="assets/images/crystal2.svg" alt="blue crystal" width="150" height="150">
+				<img src="assets/images/crystal3.svg" alt="purple crystal" width="150" height="150">
+				<img src="assets/images/crystal4.svg" alt="green crystal" width="150" height="150">
 			<div class="score">	
-				<h2>computerChoice</h2>
+				<h2>The Number to Match: 
+					<span id="computerChoice" ></span>
+				</h2>
 			</div><!--closes score-->
 			<div class="score">	
 				<h2>yourTotal</h2>
@@ -78,6 +80,7 @@
 
 
 
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 
 	<script type="text/javascript" src="assets/javascript/home.js"></script>
