--- a/index.html
+++ b/index.html
@@ -56,9 +56,29 @@
 			</div><!--closes board-->
 
 				<img src="assets/images/crystal1.svg" alt="pink crystal" width="150" height="150">
+				<div class="score">	
+				<h2>The Number to Match 1: 
+					<span id="crystal1" ></span>
+				</h2>
+			</div><!--closes score-->
 				<img src="assets/images/crystal2.svg" alt="blue crystal" width="150" height="150">
+				<div class="score">	
+				<h2>The Number to Match n2: 
+					<span id="crystal2" ></span>
+				</h2>
+			</div><!--closes score-->
 				<img src="assets/images/crystal3.svg" alt="purple crystal" width="150" height="150">
+				<div class="score">	
+				<h2>The Number to Match 3: 
+					<span id="crystal3" ></span>
+				</h2>
+			</div><!--closes score-->
 				<img src="assets/images/crystal4.svg" alt="green crystal" width="150" height="150">
+				<div class="score">	
+				<h2>The Number to Match 4: 
+					<span id="crystal4" ></span>
+				</h2>
+			</div><!--closes score-->
 			<div class="score">	
 				<h2>The Number to Match: 
 					<span id="computerChoice" ></span>
@@ -83,7 +103,7 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 
-	<script type="text/javascript" src="assets/javascript/home.js"></script>
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
 
 
 		<!-- jQuery library
