html validates, jQuery somewhat understood and working, css header needs finessed but it's a long weekend

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 				<p> You lose the game if your total score goes above the computer.</p>
 				<br />
 				<p> Each time when the game start, the game will change the values of each crystal.</p>
-				<br />
 			</div><!--closes instructions-->
 		</div><!--closes box-->
 	</header>
@@ -46,17 +45,17 @@
 				<h2> Wins: <span id="playerWins" ></span></h2>	
 			</div><!--closes board-->
 			<div class="board">
-				<h3> <span id="status"></span></h3>	
+				<h3 id="status">Best of Luck</h3>	
 			</div><!--closes board-->
 			<div class="board">
 				<h2> Losses: <span id="playerLosses" ></span></h2>	
 			</div><!--closes board-->
 
 			<!--images-->
-				<img src="assets/images/crystal1.svg" id="one" alt="pink crystal" width="150" height="150">
-				<img src="assets/images/crystal2.svg" id="two" alt="blue crystal" width="150" height="150">
-				<img src="assets/images/crystal3.svg" id="three" alt="purple crystal" width="150" height="150">
-				<img src="assets/images/crystal4.svg" id="four" alt="green crystal" width="150" height="150">
+				<img src="assets/images/crystal1.svg" id="one" alt="pink crystal">
+				<img src="assets/images/crystal2.svg" id="two" alt="blue crystal">
+				<img src="assets/images/crystal3.svg" id="three" alt="purple crystal">
+				<img src="assets/images/crystal4.svg" id="four" alt="green crystal">
 			<div class="clear"></div>
 
 			<div class="score">	
