http to https in jQuery link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<a href="https://justofflakeshoredrive.com" target="_blank"><h5> justofflsd.com </h5></a>
 	</footer>
 
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="  crossorigin="anonymous"></script>
 		<script type="text/javascript" src="assets/javascript/game.js"></script>
 
 	</body>
