https for jQuery

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<a href="https://github.com/intaglioplate312/week-4-game" target="_blank"><img src="assets/images/github_icon.svg" alt="github logo" width="30" height="30"></a>
 		<a href="https://justofflakeshoredrive.com" target="_blank"><h5> justofflsd.com </h5></a>
 	</footer>
-
+		<!--jQuery Link-->
 		<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="  crossorigin="anonymous"></script>
 		<script type="text/javascript" src="assets/javascript/game.js"></script>
 
