--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--meta name=”description” content=”155 characters of message matching text with a call to action goes here”-->
-    <meta name="description" content="JQuery Crystal Game">
+    <meta name="description" content="Crystal Collector a fun jQuery game.">
     <meta name="author" content="Helen Smith">
     <meta property="og:title" content="Crystal Collectors">
     <meta property="og:image" content="assets/images/screen_shot.png">
     <meta property="og:description" content="A jQuery Crystal Game">
     <meta property="og:url" content="https://justofflakeshoredrive.com/crystal-collector/index.html">
-
     <!-- Up to 70 Characters of Keyword-relevant text here -->
     <title>Crystals Collector</title>
     <!--Faviocon-->
@@ -81,7 +80,7 @@
     <!--closes box-->
 </main>
 <footer>
-    <a href="https://github.com/intaglioplate312/week-4-game" target="_blank"><img src="assets/images/github_icon.svg" alt="github logo" width="30" height="30"></a>
+    <a href="https://github.com/intaglioplate312/stunning_crystals_game" target="_blank"><img src="assets/images/github_icon.svg" alt="github logo" width="30" height="30"></a>
     <a href="https://justofflakeshoredrive.com" target="_blank">
         <h5> justofflsd.com </h5>
     </a>
